# lat2db

./: .gitignore  MAINFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
UI/: .gitignore  package-lock.json  package.json
UI/public/: index.html  manifest.json
UI/src/: App copy1.js  App.css  App.js
docs/: conf.py  index.rst
docs/api/: api.rst  data_models.rst  tools.rst
examples/pyat/: bessy2_sr_reflat.py  bessyii_2_json_f44e7064-ba80-4f0c-a193-80997aa3d553.json  bessyii_from_database.py  bessyii_from_json.py  bessyii_json_f44e7064-ba80-4f0c-a193-80997aa3d553.json  bessyii_lattice_json.json  bessyii_ring_comparasion_with_pyat_data.py  bessyii_ring_from_json.py  create_ring.ipynb  create_ring.py  element_position.py  filter_machine.py  mls_lattice_json.json  mls_sr_reflat.py  my_version.json
lat2db/: __init__.py  _config.py  config.cfg
lat2db/bl/: export_to_json.py  set_machine.py
lat2db/controller/: backup_code.txt  get_at_ring_output.py  get_machine_output.py  index_controller.py  machine_controller.py  machine_helper.py  machine_update_helper.py
lat2db/db/: mongo_repository.py
lat2db/model/: __init__.py  accelerator.py  beam_position_monitor.py  bending.py  cavity.py  classical_magnet.py  dipole.py  drift.py  element.py  element_properties.py  energy.py  geometric_info.py  machine.py  (+13 more)
scripts/: bessy2_export.py  daemon_start.sh  export_lattice_to_db.py  main.py  test.py  test2.py  test3.py  test_api.py
src/: __init__.py
tests/: crud_tests.py  test_machine.py
tools/: export_to_json.py
(+63 files in other folders)
