# -*- coding: utf-8 -*-
[metadata]
name = lat2db
fullname = lattice to database
version = 0.1.0
url = https://gitlab.helmholtz-berlin.de/acc-tools/lat2db
author = Waheedullah Sulaiman Khail, Pierre Schnizer
author_email = wahedullah.sulaiman_khail@helmholtz-berlin.de, pierre.schnizer@helmholtz-berlin.de
description =
long_description = file: README.rst
classifiers =
	 Development Status :: 4 - Beta
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License (GPL)
     Programming Language :: Python :: 3
     Topic :: Scientific/Engineering :: Physics
[build-system]
requires = setup_tools


[options]
packages = find:
include_package_data = True
zip_safe = False
